refactory with good naming and better performance
		  Body
Signed-off-by: Mao Chuan Li <mao.chuan.li@gmail.com>

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,15 @@ dist.jar=${dist.dir}/CountDown.Data.Warehouse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-pool2-2.4.2.jar=lib/commons-pool2-2.4.2.jar
+file.reference.derbyclient.jar=lib/derbyclient.jar
+file.reference.ojdbc6.jar=lib/ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.DW.Library.classpath}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.commons-pool2-2.4.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
