--- a/system.properties
+++ b/system.properties
@@ -9,9 +9,6 @@ in.db.username=kqc3001
 in.db.password=warehouse
 
 ## Derby Database
-in.db.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-in.db.url=jdbc:derby:countdownDB;create=true
-
 # The operationl database connection;
 in.db.driverClassName=org.apache.derby.jdbc.ClientDriver
 in.db.url=jdbc:derby://localhost:1527/countdownDB
@@ -27,5 +24,4 @@ out.db.password=password
 meshjoin.partitions=10
 stream.partition.size=1000
 
-
-
+sql.insert.batch.size=500
