--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,7 +8,7 @@ application.vendor=maochuanli
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
-build.dir=build
+build.dir=${user.home}/NB.Builds/${application.title}/build
 build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
 # Only compile against the classpath explicitly listed here:
@@ -24,7 +24,7 @@ debug.test.classpath=\
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
-dist.dir=dist
+dist.dir=${user.home}/NB.Builds/${application.title}/dist
 dist.jar=${dist.dir}/CountDown.Data.Warehouse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
