update the word document for final report
A final report is created, along with a pdf version.

Signed-off-by: Mao Chuan Li <mao.chuan.li@gmail.com>

--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,7 @@
                 <include name="*.sh"/>
                 <include name="*.bat"/>
                 <include name="*.doc"/>
+                <include name="*.pdf"/>
             </fileset>
         </copy> 
        
