update the strema.partition.size to 50 as requested
Body

Signed-off-by: Mao Chuan Li <mao.chuan.li@gmail.com>

--- a/build.xml
+++ b/build.xml
@@ -93,7 +93,7 @@
         <copydir src="${basedir}/bin" dest="${dist.dir}/bin"/>
 		<copydir src="${basedir}/lib" dest="${dist.dir}/lib"/>
         <copydir src="${basedir}/DDL" dest="${dist.dir}/DDL"/>
-        <copydir src="${user.home}/db-derby-10.11.1.1-bin/" dest="${dist.dir}/derby.home"/>
+        <copydir src="${java.home}/db/" dest="${dist.dir}/derby.home"/>
         <copy todir="${dist.dir}/derby.home/">
             <fileset dir="${basedir}">
                 <include name="derby.properties"/>
