--- a/system.properties
+++ b/system.properties
@@ -4,8 +4,8 @@
 # out.db.* are for data warehouse database. 
 # For the same properties, the latter lin will overwrite the previous one,
 # For example:
-#            a = 3
-#            a = 5
+# line 1:    a = 3
+# line 2:    a = 5
 #            System will take the latter value 5 for execution.
 
 ## Oracle database for Operational Database
@@ -38,10 +38,10 @@ meshjoin.partitions=10
 # The number of records within one partition in the stream queue, 
 # Once one partition of realtime records reach to this number, it will be pushed
 # into the stream queue for mesh-join
-stream.partition.size=1000
+stream.partition.size=50
 ######################## STREAM QUEUE, ONE PART HAS 1000 RECORDS ##############
 #            #  P  |  P   |  P   |  P  |  P  |   P   |  P   |  P  |  P   | Part  |
-# max=1000 > #  1> |  2>  |  3>  |  4> |  5> |   6>  |  7>  |  8> |  9>  |  10>  | >> Queue.POP()
+# max=50   > #  1> |  2>  |  3>  |  4> |  5> |   6>  |  7>  |  8> |  9>  |  10>  | >> Queue.POP()
 ################################################################################
 # For the master data partition size, it is dynamically calculated in system based on above parition.size
 
